manifests/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console-ui-deployment
  namespace: console
spec:
  selector:
    matchLabels:
      app: console-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: console-ui
    spec:
      containers:
        - name: console-ui
          image: gleafink.azurecr.io/gleafink-console:1.0
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gleafink-acrpull
