manifests/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-ui-svc-clusterip
  namespace: console
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: console-ui
